--- a/demo/multi.html
+++ b/demo/multi.html
@@ -297,9 +297,9 @@
 			</fieldset>
 
 			<fieldset>
-				<legend>Gradient modifiers</legend>
+				<legend>Theme / gradient modifiers</legend>
 				<div class="button-grid">
-					<button data-prop="flipGradient">flipGradient</button>
+					<button data-prop="flipColors">flipColors</button>
 					<button data-prop="horizontalGradient">horizontalGradient</button>
 					<button data-prop="splitGradient">splitGradient</button>
 				</div>
