update demos and tools

--- a/demo/multi.html
+++ b/demo/multi.html
@@ -256,13 +256,8 @@
 
 			<fieldset>
 				<legend>Peak behavior</legend>
-				<label class="label"><a href="https://audiomotion.dev/#/?id=peakgravity-number" target="_blank">gravity</a>
-					<input type="range" min="0.1" max="20" step=".1" data-setting="gravity">
-					<div class="value"></div>
-				</label>
-
-				<label class="label"><a href="https://audiomotion.dev/#/?id=peakfadetime-number" target="_blank">peakFadeTime</a>
-					<input type="range" min="0" max="2000" step="50" data-setting="peakFadeTime">
+				<label class="label"><a href="https://audiomotion.dev/#/?id=peakdecaytime-number" target="_blank">peakDecayTime</a>
+					<input type="range" min="0" max="2000" step="50" data-setting="peakDecayTime">
 					<div class="value"></div>
 				</label>
 
