--- a/tools/octave-bands-viewer.html
+++ b/tools/octave-bands-viewer.html
@@ -44,16 +44,16 @@
 		</div>
 
 		<div class="flex">
-			<label><a href="https://audiomotion.dev/#/?id=mode-number" class="info" data-text="[audioMotion.mode]" target="_blank">Visualization Mode</a></label>
+			<label><a href="https://audiomotion.dev/#/?id=bandresolution-number" class="info" data-text="[audioMotion.bandResolution]" target="_blank">Band Resolution</a></label>
 			<select id="mode">
-				<option value="8">Full octave bands</option>
-				<option value="7">Half octave bands</option>
-				<option value="6">1/3rd octave bands</option>
-				<option value="5">1/4th octave bands</option>
-				<option value="4">1/6th octave bands</option>
-				<option value="3">1/8th octave bands</option>
-				<option value="2">1/12th octave bands</option>
-				<option value="1">1/24th octave bands</option>
+				<option value="1">Full octave bands</option>
+				<option value="2">Half octave bands</option>
+				<option value="3">1/3rd octave bands</option>
+				<option value="4">1/4th octave bands</option>
+				<option value="5">1/6th octave bands</option>
+				<option value="6">1/8th octave bands</option>
+				<option value="7">1/12th octave bands</option>
+				<option value="8">1/24th octave bands</option>
 			</select>
 		</div>
 
